# ascon-jasmin

./: LICENCE  Readme.md
src/armv7_bi/: Makefile  ascon_128.jazz  ascon_128_a.jazz
src/armv7_bi/jasmin/: ascon_aead.jinc  ascon_core.jinc  ascon_p.jinc  interleave.jinc  word.jinc
src/x64/: Makefile  ascon_128.jazz  ascon_128_a.jazz
src/x64/jasmin/: ascon_aead.jinc  ascon_core.jinc  ascon_p.jinc  word.jinc
src/x64/proof/: ascon_ct_proof.ec
src/x64/rust/benches/: asconbench.rs
src/x64/rust/src/: lib.rs  main.rs
src/x64/rust/src/rlib/: ascon.rs  lib.rmeta  libascon.rlib
src/x64/rust/tests/: test_kat.rs  test_rnd_corr.rs
src/x64_bi/: Makefile  ascon_128.jazz  ascon_128_a.jazz  range_config.json
src/x64_bi/jasmin/: ascon_aead.jinc  ascon_core.jinc  ascon_p.jinc  interleave.jinc  word.jinc
src/x64_bi/proof/: .gitignore  ascon_proof.ec
src/x64_bi/rust/: Cargo.toml  Readme.md  build.rs
src/x64_bi/rust/src/: lib.rs  main.rs
src/x64_bi/rust/src/rlib/: ascon.rs  lib.rmeta  libascon.rlib
src/x64_bi/rust/tests/: test_kat.rs  test_rnd_corr.rs
